--- a/src/app/characters/characters-list/characters-list.component.html
+++ b/src/app/characters/characters-list/characters-list.component.html
@@ -9,4 +9,5 @@
 </mat-card>
 
 <mat-paginator [length]="characters.length"
+               [pageIndex]="pageIndex$ | async"
                [pageSize]="pageSize"></mat-paginator>
