--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,2 +1,2 @@
 <app-characters-list
-    [characters]="characters$ | async"></app-characters-list>
+    [characters]="filteredCharacters$ | async"></app-characters-list>
