--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-filter></app-filter>
-<router-outlet></router-outlet>
+<div class="wrapper pt-4" [ngtLoader]="'appLoader'">
+    <div class="container">
+        <div class="h1 text-center mb-4">STAR WARS APP</div>
+        <app-filter></app-filter>
+        <router-outlet></router-outlet>
+    </div>
+</div>
