- fix on responsive;

--- a/src/app/characters/filter/filter.component.html
+++ b/src/app/characters/filter/filter.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" class="mb-3">
-    <div class="row">
+    <div class="row no-gutters">
         <app-select-control [formControlName]="'films'"
                             [options]="films$ | async"
                             [placeholder]="'Films'"
